Fix mosaic overlap bug

--- a/css/azalea-override.css
+++ b/css/azalea-override.css
@@ -6,9 +6,22 @@
   height: 100px;
 }
 
+.masonry_item {
+  background: #333;
+  margin-bottom: 5px;
+  border: 1px solid black;
+  width: 265px;
+}
 
+.masonry_item img {
+  margin
+}
 
 /**************
  Home Featured
 **************/
+
+
+
+
 
